--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -10,11 +10,15 @@ jobs:
       - name: checkout
       - uses: actions/checkout@master
       
+      - name: Install and Build
+        run: |
+          npm install
+          npm run build
+          
       - name: buildAndDeploy
         uses: JamesIves/github-pages-deploy-action@master
         env: 
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           BRANCH: gh-pages
           FOLDER: dist
-          BUILD_SCRIPT: npm install && npm run build
         
