--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -1,8 +1,8 @@
 name: buildAndDeploy
-
 on:
-  push
-
+  push:
+    branches:
+      - master
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
