--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -1,4 +1,4 @@
-name: buildAndDeploy
+name: GitHub Actions Build and Deploy Demo
 on:
   push:
     branches:
@@ -7,18 +7,13 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-      - uses: actions/checkout@master
-      
-      - name: Install and Build
-        run: |
-          npm install
-          npm run build
-          
-      - name: buildAndDeploy
-        uses: JamesIves/github-pages-deploy-action@master
-        env: 
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: dist
-        
+    - name: Checkout
+      uses: actions/checkout@master
+
+    - name: Build and Deploy
+      uses: JamesIves/github-pages-deploy-action@master
+      env:
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: build
+        BUILD_SCRIPT: npm install && npm run build
