--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -14,6 +14,6 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4.2.3
       env:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BRANCH: master
+        BRANCH: gh-pages
         FOLDER: build
         BUILD_SCRIPT: npm install && npm run build
